--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,14 +1,14 @@
-OWNER_NAME="FedoRA"
-PREFIX="~"
-PUBLIC_MODE='non'
-AUTO_READ_STATUS="non"
-AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "GOD-NIKA"
-IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
+OWNER_NAME="ommy3_blif"
+PREFIX="."
+PUBLIC_MODE='yes'
+AUTO_READ_STATUS="yes"
+AUTO_DOWNLOAD_STATUS="no"
+BOT_NAME= "ommy3_blif "
+IMAGE_MENU= "https://imgur.com/a/wBHJ5dB" 
 NUMERO_OWNER= "22891733300"
-OWNER_NAME= "᚛M๏𝓷keℽ D Lบffy᚜"
+OWNER_NAME= "᚛ommy3_blif ᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
 STARTING_BOT_MESSAGE='yes'
-ANTI_DELETE_MESSAGE='yes'
+ANTI_DELETE_MESSAGE='no'
