--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name":"ɴᴊᴀʙᴜʟᴏ ᴊʙ",
+  "name":"ommy3_blif ",
   "description":"Best whatsapp bot",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://files.catbox.moe/822xi6.jpg",
+  "logo":"https://imgur.com/a/wBHJ5dB.png",
   "repository":"https://github.com/NjabuloJ/Njabulo-Jb",
   "succes_url":"/",
   "stack":"container",
@@ -42,7 +42,7 @@
      "BOT_MENU_LINKS" : {
     
       "description":"add one or many link for your bot menu  ; eg : url1,url2,url3.....",
-      "value":"https://files.catbox.moe/822xi6.jpg",
+      "value":"https://imgur.com/a/wBHJ5dB" 
       "required":false
        
      },
